--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <img src="imgs/analytics.png" alt="Analytics illustration" />
             </div>
             <div class="right">
-                <h4 class="title">analytics</h4>
-                <h1 class="heading">built-in analytics to track your NFTs</h1>
+                <h4 class="title t-color">analytics</h4>
+                <h1 class="heading2">built-in analytics to track your NFTs</h1>
                 <p class="text">
                     Use our built-in analytics dashboard to pull valuable insights and monitor the value of your Krypto portfolio over time.
                 </p>
@@ -63,8 +63,8 @@
         </section>
         <section id="get-app">
             <div class="left">
-                <h4 class="title">get our app</h4>
-                <h1 class="heading">browse NFTs from your smartphone</h1>
+                <h4 class="title t-color">get our app</h4>
+                <h1 class="heading2">browse NFTs from your smartphone</h1>
                 <p class="text">Our Krypto app is the easiest way to keep track of your assets when you're on the go.</p>
                 <a href="#" class="primary">download on iOS</a>
             </div>
@@ -73,22 +73,29 @@
             </div>
         </section>
         <section id="testimonials">
-            <h4 class="title">testimonials</h4>
-            <h1 class="heading">read what others have to say</h1>
-            <div class="t-card">
-                <img src="imgs/test-profile1.png" alt="Previous user profile photo" class="t-img" />
-                <h3 class="t-title">olivia cole</h3>
-                <p class="t-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
+            <div class="test-headings">
+                <h4 class="title t-color">testimonials</h4>
+                <h1 class="heading2">read what others have to say</h1>
             </div>
-            <div class="t-card">
-                <img src="imgs/test-profile2.png" alt="Previous user profile photo" class="t-img" />
-                <h3 class="t-title">evan white</h3>
-                <p class="t-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
-            </div>
-            <div class="t-card">
-                <img src="imgs/test-profile3.png" alt="Previous user profile photo" class="t-img" />
-                <h3 class="t-title">jessica page</h3>
-                <p class="t-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
+            <div class="test-cards">
+                <div class="t-card">
+                    <!-- <img src="imgs/test-profile1.png" alt="Previous user profile photo" class="t-img" /> -->
+                    <div class="t-img test-img1"></div>
+                    <h3 class="t-title">olivia cole</h3>
+                    <p class="t-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
+                </div>
+                <div class="t-card">
+                    <!-- <img src="imgs/test-profile2.png" alt="Previous user profile photo" class="t-img" /> -->
+                    <div class="t-img test-img2"></div>
+                    <h3 class="t-title">evan white</h3>
+                    <p class="t-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
+                </div>
+                <div class="t-card">
+                    <!-- <img src="imgs/test-profile3.png" alt="Previous user profile photo" class="t-img" /> -->
+                    <div class="t-img test-img3"></div>
+                    <h3 class="t-title">jessica page</h3>
+                    <p class="t-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel.</p>
+                </div>
             </div>
         </section>
         <section id="call-to-action">
