--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </section>
         <section id="call-to-action">
             <div>
-                <h4 class="title">are you ready?</h4>
-                <h1 class="heading">be a part of the next big thing</h1>
+                <h4 class="action-title">are you ready?</h4>
+                <h1 class="heading2 center">be a part of the next big thing</h1>
                 <a href="#" class="primary black">get started</a>
             </div>
         </section>
