Desktop version complete. Moving on to Tablet and Mobile versions.

--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
             </div>
             <div class="newsletter">
                 <p>join our newsletter</p>
-                <input type="email" placeholder="Email Address" />
-                <button id="submit">submit</button>
+                <div class="email">
+                    <input type="email" placeholder="Email Address" />
+                    <button id="submit">submit</button>
+                </div>
             </div>
         </footer>
     </div>
