Tablet and mobile version complete.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
         <header>
             <div class="bg-circle bg-c1"></div>
-            <nav>
+            <div class="nav">
                 <div class="logo">krypto</div>
                 <ul class="nav-list">
                     <li><a href="#about" class="nav-item">about</a></li>
@@ -19,8 +19,17 @@
                     <li><a href="#contact" class="nav-item">contact</a></li>
                     <li><a href="#buy" class="nav-item" id="nav-item-last">buy nfts</a></li>
                 </ul>
-            </nav>
+                <button class="hamburger">
+                    <div class="h-bar"></div>
+                </button>
+            </div>
         </header>
+        <nav class="mobile-nav">
+            <a href="#about" class="nav-item">about</a>
+            <a href="#pricing" class="nav-item">pricing</a>
+            <a href="#contact" class="nav-item">contact</a>
+            <a href="#buy" class="nav-item" id="nav-item-last">buy nfts</a>
+        </nav>
         <section id="hero">
             <div class="left">
                 <h1 class="heading">
@@ -144,5 +153,6 @@
             </div>
         </footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
